# PlausiDen-Inject

./: .composition-baseline.json  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LEGAL.md  LICENSE  OPSEC.md  README.md  SECURITY.md  deny.toml  justfile
.github/workflows/: ci.yml  security.yml
inject-android/: Cargo.toml
inject-android/src/: content_provider.rs  files.rs  lib.rs  media_store.rs  shared_prefs.rs  sqlite.rs
inject-core/: Cargo.toml
inject-core/src/: attribution_scrubber.rs  conflict_detector.rs  error.rs  injection_stats.rs  lib.rs  rollback.rs  rollback_registry.rs  sanitizer.rs  schema_check.rs  snapshot_store.rs  sql_sanitizer.rs  target.rs  target_health.rs  traits.rs  transaction.rs  verification.rs
inject-core/tests/: cross_platform.rs
inject-ios/: Cargo.toml
inject-ios/src/: calendar.rs  contacts.rs  lib.rs  photos.rs  sandbox.rs
inject-linux/: Cargo.toml
inject-linux/src/: browser_chrome.rs  browser_firefox.rs  filesystem.rs  input.rs  lib.rs  logs.rs  proc.rs  translator.rs
inject-linux/src/browser_chrome/: chrome_crypto.rs  mod.rs
inject-linux/tests/: chrome_integration.rs  firefox_integration.rs  pipeline_integration.rs
inject-macos/: Cargo.toml
inject-macos/src/: browser_safari.rs  coredata.rs  filesystem.rs  fsevents.rs  lib.rs  spotlight.rs
inject-macos/tests/: safari_integration.rs
inject-windows/: Cargo.toml
inject-windows/src/: eventlog.rs  lib.rs  lnk.rs  ntfs.rs  prefetch.rs  recycle_bin.rs  registry.rs  thumbcache.rs
