[workspace]
resolver = "3"
members = [
    "inject-core",
    "inject-linux",
    "inject-macos",
    "inject-windows",
    "inject-android",
    "inject-ios",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
repository = "https://github.com/thepictishbeast/PlausiDen-Inject"

[workspace.dependencies]
# Internal crates
inject-core = { path = "inject-core" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# Logging / tracing
tracing = "0.1"

# Identifiers
uuid = { version = "1", features = ["v4", "serde"] }

# Randomness
rand = "0.8"
rand_chacha = "0.3"
