[package]
name = "inject-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for PlausiDen injection adapters"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
