[package]
name = "inject-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core traits and types for PlausiDen injection adapters"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
inject-linux = { path = "../inject-linux" }
inject-macos = { path = "../inject-macos" }
inject-windows = { path = "../inject-windows" }
inject-android = { path = "../inject-android" }
inject-ios = { path = "../inject-ios" }
