[package]
name = "inject-ios"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "iOS injection adapters for PlausiDen"

[dependencies]
inject-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
