[package]
name = "inject-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Linux injection adapters for PlausiDen"

[dependencies]
inject-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
tempfile = "3"
