[package]
name = "inject-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Linux injection adapters for PlausiDen"

[dependencies]
inject-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
filetime = "0.2"
hostname = "0.4"

# Chrome cookie encryption (AES-128-CBC with PBKDF2-HMAC-SHA1 key derivation)
aes = "0.8"
cbc = "0.1"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
sha1 = "0.10"
hmac = "0.12"

[dev-dependencies]
tempfile = "3"
