[package]
name = "inject-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "macOS injection adapters for PlausiDen"

[dependencies]
inject-core = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
