[package]
name = "inject-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Windows injection adapters for PlausiDen"

[dependencies]
inject-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
